Refactoring styles and adding routines

--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,11 @@
-:root {
-  --main-color: #f8f5fa;
-  --accent-color: #82628a;
-  --secondary-color: #a984aa;
-  --main-text-color: #2d2d2d;
-  --secondary-text-color: #82628a;
-  --white-color: #fff;
-}
 body {
   margin: 0;
-  font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-    "Helvetica Neue", sans-serif;
+  font-family: Open Sans;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--main-color);
   color: var(--main-text-color);
+  box-sizing: border-box;
 }
 
 code {
@@ -26,26 +17,7 @@ code {
   color: var(--secondary-text-color) !important;
 } */
 
-.BookList .BookCard:hover {
+/* .BookList .BookCard:hover {
   all: revert;
   box-shadow: 4px 6px 10px 5px rgba(104, 79, 110, 0.2) !important;
-}
-
-.header {
-  animation: open-site-header-anim 1s ease-in-out;
-  animation-iteration-count: 1;
-}
-
-.show {
-  opacity: 1 !important; /* Показываем элементы */
-  transform: translateY(0) !important; /* Возвращаем в исходное положение */
-}
-
-@keyframes open-site-header-anim {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
+} */
