--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -26,13 +26,25 @@
   }
 }
 
-.a {
+.link {
+  text-decoration: none;
   font-family: Segoe Print, cursive;
   color: var(--white-color);
   text-decoration: none;
   /* transition: "text-shadow 0.3s ease-in-out"; Анимация при наведении */
-  padding: "8px";
+  padding: 8px;
+  border-radius: 12px;
+  transition: background-color 0.2s ease-in-out;
 }
+
+.link:hover {
+  background-color: var(--hover-opacity-color);
+}
+
+.link:active {
+  background-color: var(--active-opacity-color);
+}
+
 .h1 {
   font-size: "36px";
 }
