--- a/src/components/BookCard/BookCard.module.css
+++ b/src/components/BookCard/BookCard.module.css
@@ -11,16 +11,21 @@
     rgba(255, 255, 255, 0) 100%
   ); /* Лёгкий градиент на фон карточки */
   box-shadow: 4px 6px 10px rgba(104, 79, 110, 0.1);
-  color: var(--secondary-text-color);
+  color: var(--accent-color);
   text-shadow: 1px 1px 2px rgba(130, 98, 138, 0.1);
   font-size: 20px;
   cursor: pointer; /* Меняет курсор на указатель; чтобы потом можно было нажать на карточку */
-  transition: box-shadow 0.3s ease-in-out;
   /* анимация появления */
   opacity: 0; /* Скрывает элементы изначально */
   transform: translateY(-50px); /* Смещает элементы вверх */
-  transition: opacity 0.5s ease-out, transform 0.5s ease-out; /* Анимация */
+  transition: opacity 0.5s ease-out, transform 0.5s ease-out,
+    box-shadow 0.3s ease-in-out; /* Анимация */
 }
+
+.bookCard:hover {
+  box-shadow: 4px 6px 10px 5px rgba(104, 79, 110, 0.2);
+}
+
 .image {
   height: 300px;
   border-radius: 3px; /* Скругление углов у обложки книги */
@@ -46,4 +51,5 @@
 }
 .biggerText {
   font-size: 24px;
+  color: var(--accent-text-color);
 }
