--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -11,6 +11,8 @@
   border-radius: 30px 30px 0 0;
   margin-top: 30px;
   margin-inline: auto; /* Расположение по середине */
+  position: sticky;
+  top: 100vh; /* Прижимает к низу, когда контента достаточно */
 }
 .h {
   color: var(--white-color);
